# spin-sqlite-example

./: .gitignore  build.sh  readme.md  spin.toml
.spin/logs/: api_stderr.txt  libsql-example_stderr.txt
api/: Cargo.toml  build.rs
api/src/: lib.rs
ui/: index.html
