[package]
name = "api"
authors = ["Radu Matei <radu@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde_json = "1"
spin-sdk = "5.2.0"
rusqlite = { version = "0.28", default-features = false }

[workspace]
